docs/pages/versions/v57.0.0/sdk/ui/jetpack-compose/button.mdx
---
title: Button
description: Jetpack Compose Button components for displaying native Material3 buttons.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-57/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['android', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ComponentExample } from '~/ui/components/ComponentExample';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';

> **info** For cross-platform usage, see the universal [`Button`](../universal/button) — it renders the appropriate native component per platform.

Expo UI provides five button components that match the official Jetpack Compose [Button API](https://developer.android.com/develop/ui/compose/components/button): `Button` (filled), `FilledTonalButton`, `OutlinedButton`, `ElevatedButton`, and `TextButton`. All variants share the same props and accept composable children for content.

<ContentSpotlight
  variant="component"
  aspect="landscape"
  src="/static/images/expo-ui/button/android-light.webp"
  darkSrc="/static/images/expo-ui/button/android-dark.webp"
  alt="Filled, outlined, and text buttons showing the Material 3 emphasis hierarchy"
/>

| Type         | Appearance                                    | Purpose                                                                                                                                                                               |
| ------------ | --------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| Filled       | Solid background with contrasting text.       | High-emphasis buttons for primary actions such as "submit" and "save."                                                                                                                |
| Filled tonal | Background color varies to match the surface. | Also for primary or significant actions. Filled tonal buttons provide more visual weight and suit functions such as "add to cart" and "Sign in."                                      |
| Elevated     | Stands out by having a shadow.                | Serves a similar purpose to tonal buttons. Increase elevation to make the button appear even more prominently.                                                                        |
| Outlined     | Features a border with no fill.               | Medium-emphasis buttons, containing actions that are important but not primary. They pair well with other buttons to indicate alternative, secondary actions like "Cancel" or "Back." |
| Text         | Displays text with no background or border.   | Low-emphasis buttons, ideal for less critical actions such as navigational links, or secondary functions like "Learn more" or "View details."                                         |

## Installation

<APIInstallSection />

## Usage

### Basic button

A filled button is the default, high-emphasis button for primary actions.

<ComponentExample
  title="BasicButtonExample.tsx"
  src="/static/images/expo-ui/examples/compose-button-basic-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/compose-button-basic-android-dark.webp"
  alt="A filled Material 3 button labelled Press me">

```tsx
import { Host, Button, Text } from '@expo/ui/jetpack-compose';

export default function BasicButtonExample() {
  return (
    <Host matchContents>
      <Button onClick={() => alert('Pressed!')}>
        <Text>Press me</Text>
      </Button>
    </Host>
  );
}
```

</ComponentExample>

### Button variants

Use different button components to convey varying levels of emphasis.

<ComponentExample
  title="ButtonVariantsExample.tsx"
  src="/static/images/expo-ui/examples/compose-button-variants-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/compose-button-variants-android-dark.webp"
  alt="Filled, filled tonal, outlined, elevated, and text buttons stacked in a column">

```tsx
import {
  Host,
  Button,
  FilledTonalButton,
  OutlinedButton,
  ElevatedButton,
  TextButton,
  Column,
  Text,
} from '@expo/ui/jetpack-compose';

export default function ButtonVariantsExample() {
  return (
    <Host matchContents>
      <Column verticalArrangement={{ spacedBy: 8 }}>
        <Button onClick={() => {}}>
          <Text>Filled</Text>
        </Button>
        <FilledTonalButton onClick={() => {}}>
          <Text>Filled Tonal</Text>
        </FilledTonalButton>
        <OutlinedButton onClick={() => {}}>
          <Text>Outlined</Text>
        </OutlinedButton>
        <ElevatedButton onClick={() => {}}>
          <Text>Elevated</Text>
        </ElevatedButton>
        <TextButton onClick={() => {}}>
          <Text>Text</Text>
        </TextButton>
      </Column>
    </Host>
  );
}
```

</ComponentExample>

### Button with icons

Since buttons accept composable children, you can add leading and trailing icons using the `Icon` component. This follows the [Material 3 buttons with icon](https://m3.material.io/components/buttons/guidelines) pattern ([official sample](https://cs.android.com/androidx/platform/frameworks/support/+/androidx-main:compose/material3/material3/samples/src/main/java/androidx/compose/material3/samples/ButtonSamples.kt;l=179?q=ButtonWithIconSample)), use 18dp icon size, 8dp spacing between the icon and label.

<ComponentExample
  title="ButtonWithIconsExample.tsx"
  src="/static/images/expo-ui/examples/compose-button-icons-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/compose-button-icons-android-dark.webp"
  alt="Three buttons showing a leading icon, a trailing icon, and both icons at once">

```tsx
import {
  Host,
  Button,
  OutlinedButton,
  FilledTonalButton,
  Column,
  Icon,
  Spacer,
  Text,
} from '@expo/ui/jetpack-compose';
import { width } from '@expo/ui/jetpack-compose/modifiers';

const addIcon = require('./assets/add.png');
const sendIcon = require('./assets/send.png');

export default function ButtonWithIconsExample() {
  return (
    <Host matchContents>
      <Column verticalArrangement={{ spacedBy: 8 }}>
        {/* Leading icon */}
        <Button onClick={() => {}}>
          <Icon source={addIcon} size={18} tint="#FFFFFF" />
          <Spacer modifiers={[width(8)]} />
          <Text>Add item</Text>
        </Button>

        {/* Trailing icon */}
        <OutlinedButton onClick={() => {}}>
          <Text>Send</Text>
          <Spacer modifiers={[width(8)]} />
          <Icon source={sendIcon} size={18} />
        </OutlinedButton>

        {/* Both leading and trailing icons */}
        <FilledTonalButton onClick={() => {}}>
          <Icon source={addIcon} size={18} />
          <Spacer modifiers={[width(8)]} />
          <Text>Create & Send</Text>
          <Spacer modifiers={[width(8)]} />
          <Icon source={sendIcon} size={18} />
        </FilledTonalButton>
      </Column>
    </Host>
  );
}
```

</ComponentExample>

### Custom colors

Override container and content colors using the `colors` prop.

<ComponentExample
  title="CustomColorsExample.tsx"
  src="/static/images/expo-ui/examples/compose-button-custom-colors-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/compose-button-custom-colors-android-dark.webp"
  alt="A purple button with white text, overriding the theme container and content colors">

```tsx
import { Host, Button, Text } from '@expo/ui/jetpack-compose';

export default function CustomColorsExample() {
  return (
    <Host matchContents>
      <Button
        onClick={() => {}}
        colors={{
          containerColor: '#6200EE',
          contentColor: '#FFFFFF',
        }}>
        <Text>Purple Button</Text>
      </Button>
    </Host>
  );
}
```

</ComponentExample>

### Custom shape

<ComponentExample
  title="CustomShapeExample.tsx"
  src="/static/images/expo-ui/examples/compose-button-custom-shape-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/compose-button-custom-shape-android-dark.webp"
  alt="A button with rounded top start and bottom end corners and square opposite corners">

```tsx
import {
  Host,
  Button,
  Shape,
  Text,
} from '@expo/ui/jetpack-compose';

export default function CustomShapeExample() {
  return (
    <Host matchContents>
      <Button
        onClick={() => {}}
        shape={Shape.RoundedCorner({
          cornerRadii: { topStart: 16, bottomEnd: 16 },
        })}>
        <Text>Custom Shape</Text>
      </Button>
    </Host>
  );
}
```

</ComponentExample>

## API

```tsx
import {
  Button,
  FilledTonalButton,
  OutlinedButton,
  ElevatedButton,
  TextButton,
} from '@expo/ui/jetpack-compose';
```

<APISection
  packageName="expo-ui/jetpack-compose/button"
  apiName="Button"
/>
